<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.About">
        <LinearLayout
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="0">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/about"
                    android:textSize="30dp"
                    android:layout_marginLeft="30dp"
                    android:text="About"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold">
                </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/text1"
            android:weightSum="0">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/nim"
                    android:textSize="20dp"
                    android:layout_marginLeft="20dp"
                    android:textStyle="bold">
                </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/text2"
            android:weightSum="0">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textSize="20dp"
                    android:layout_marginLeft="20dp"
                    android:textStyle="bold">
                </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/text3"
            android:weightSum="0">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ttl"
                    android:textSize="20dp"
                    android:layout_marginLeft="20dp"
                    android:textStyle="bold">
                </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/text4"
            android:weightSum="0">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    android:textSize="20dp"
                    android:layout_marginLeft="20dp"
                    android:textStyle="bold">
                </TextView>
        </LinearLayout>


</RelativeLayout>