<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BiodataActivity">

    <TextView
        android:id="@+id/bi"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="BIODATA"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:layout_below="@id/bi"
        android:layout_marginTop="30dp"
        android:id="@+id/textview_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nama"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_nama"
        android:ems="10"
<<<<<<< HEAD
        android:hint="" ><requestFocus />
=======
        android:hint="nama anda" >

        <requestFocus />

>>>>>>> 9e430d0ac12e1647535d89b004a942353fffbfdf
    </EditText>
    <TextView
        android:id="@+id/textview_jk"
        android:layout_below="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jk"
        android:textSize="15sp"
        android:textStyle="bold"/>
      <RadioGroup
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/jk"
          android:layout_below="@id/textview_jk">

          <RadioButton
              android:id="@+id/pria"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="true"
              android:text="@string/pria" />

          <RadioButton
              android:id="@+id/wanita"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/wanita" />
      </RadioGroup>
    <TextView
        android:layout_below="@id/jk"
        android:layout_marginTop="30dp"
        android:id="@+id/textview_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alamat"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
<<<<<<< HEAD
        android:id="@+id/alamat"
=======
        android:id="@+id/edittext_jk"
>>>>>>> 9e430d0ac12e1647535d89b004a942353fffbfdf
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_alamat"
        android:ems="10"
<<<<<<< HEAD
        android:hint="" ><requestFocus />
    </EditText>

    <TextView
        android:layout_below="@id/alamat"
        android:layout_marginTop="30dp"
        android:id="@+id/textview_ttl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tempat/Tanggal Lahir"
        android:textSize="15sp"
        android:textStyle="bold" />
=======
        android:hint="jenis kelamin" >
>>>>>>> 9e430d0ac12e1647535d89b004a942353fffbfdf

    <EditText
        android:id="@+id/ttl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_ttl"
        android:ems="10"
        android:hint="" ><requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="Save"
<<<<<<< HEAD
        android:layout_below="@id/ttl"
=======
        android:layout_below="@id/edittext_jk"
>>>>>>> 9e430d0ac12e1647535d89b004a942353fffbfdf
        android:layout_marginTop="10dp"
        android:layout_marginLeft="300dp"/>

</RelativeLayout>